--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Task 1 start\"\"\""
+   ]
   }
  ],
  "metadata": {
