rewrote preprocess_text function to be able to open the files and remove the preamble and postable. Now working correctly

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task 1 Third-order letter approximation model'"
+       "'Task 1 Third-order letter approximation model\\n#To Do:\\n# Use them to create a model of the English language as follows. Remove any preamble and postamble. \\n# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\n# Make all letters uppercase.\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,49 +27,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File /books/Dracula.txt not found\n",
-      "THIS IS AN EXAMPLE TEXT. IT HAS  AND \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
+    "import os\n",
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_text(file_path):\n",
+    "    # Read the file content\n",
+    "    try:\n",
+    "        with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "            text = file.read()\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"File {file_path} not found\")\n",
+    "        exit(1)\n",
     "\n",
-    "def process_text(text):\n",
+    "    # Remove preamble and postamble by finding the main text boundaries (Gutenberg's common markers)\n",
+    "    start = re.search(r'\\*\\*\\* START OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
+    "    end = re.search(r'\\*\\*\\* END OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
+    "    if start and end:\n",
+    "        text = text[start.end():end.start()]\n",
     "    \n",
-    "    \n",
-    "    text = re.sub(r'[^a-zA-Z. ]', '', text)\n",
-    "    \n",
-    "    text = text.upper()\n",
-    "    \n",
-    "    return text\n",
-    "\n",
-    "#test the text input\n",
-    "#input_text = \"This is an example text. it has 123 and #!\"\n",
-    "\n",
-    "\n",
-    "#read text from file\n",
-    "file_path = \"/books/Dracula.txt\"\n",
-    "\n",
-    "try:\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        content = file.read()\n",
-    "except FileNotFoundError:\n",
-    "    print(f\"File {file_path} not found\")\n",
-    "    exit(1)\n",
-    "\n",
-    "    \n",
-    "#process the text\n",
-    "process_text = process_text(input_text)\n",
-    "print(process_text)\n",
-    "\n"
+    "    # Keep only uppercase letters, spaces, and periods, and make all text uppercase\n",
+    "    text = re.sub(r'[^A-Z. ]', '', text.upper())\n",
+    "    return text"
    ]
   }
  ],
