Added create truagram model function to create the triagram for the texts

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -61,6 +61,24 @@
     "    text = re.sub(r'[^A-Z. ]', '', text.upper())\n",
     "    return text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_trigram_model(text):\n",
+    "    # Dictionary to store trigram counts\n",
+    "    trigram_counts = defaultdict(int)\n",
+    "\n",
+    "    # Create trigrams from the processed text\n",
+    "    for i in range(len(text) - 2):\n",
+    "        trigram = text[i:i+3]\n",
+    "        trigram_counts[trigram] += 1\n",
+    "\n",
+    "    return trigram_counts"
+   ]
   }
  ],
  "metadata": {
