created process book function and output

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task 1 Third-order letter approximation model\\n#To Do:\\n# Use them to create a model of the English language as follows. Remove any preamble and postamble. \\n# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\n# Make all letters uppercase.\\n'"
+       "'Task 1 Third-order letter approximation model\\n#To Do:\\n# Use them to create a model of the English language as follows. Remove any preamble and postamble. \\n# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\n# Make all letters uppercase.\\n# Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,15 +22,17 @@
     "# Use them to create a model of the English language as follows. Remove any preamble and postamble. \n",
     "# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \n",
     "# Make all letters uppercase.\n",
+    "# Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# all imports here\n",
     "import re\n",
     "import os\n",
     "from collections import defaultdict"
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Builds a trigram frequency dictionary using a sliding window approach.\n",
     "def create_trigram_model(text):\n",
     "    # Dictionary to store trigram counts\n",
     "    trigram_counts = defaultdict(int)\n",
@@ -78,6 +81,56 @@
     "        trigram_counts[trigram] += 1\n",
     "\n",
     "    return trigram_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function processes only one specified text file\n",
+    "def process_book(file_path):\n",
+    "    # Preprocess the specified text file\n",
+    "    processed_text = preprocess_text(file_path)\n",
+    "\n",
+    "    # Create the trigram model from the processed text\n",
+    "    trigram_model = create_trigram_model(processed_text)\n",
+    "    return trigram_model\n",
+    "\n",
+    "# The file_path parameter: You need to provide the path to a specific text file,\n",
+    "# which is passed to preprocess_text() to clean the text and then used to generate the trigram model.\n",
+    "\n",
+    "file_path = \"./books/Dracula.txt\"  # Specify the path to the text file\n",
+    "trigram_model = process_single_book(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'THE': 11667\n",
+      "'HE ': 10499\n",
+      "'E P': 965\n",
+      "' PR': 845\n",
+      "'PRO': 607\n",
+      "'ROJ': 92\n",
+      "'OJE': 92\n",
+      "'JEC': 137\n",
+      "'ECT': 451\n",
+      "'CT ': 279\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display some trigrams and their counts\n",
+    "for trigram, count in list(trigram_model.items())[:10]:  # Display the first 10 trigrams, change this number to increase the amount\n",
+    "    print(f\"'{trigram}': {count}\") # display the trigram and its count in the file"
    ]
   }
  ],
