generate String function for task 2

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -17,25 +17,29 @@
     }
    ],
    "source": [
-    "\"\"\"Task 1 Third-order letter approximation model\n",
-    "#To Do:\n",
-    "# Use them to create a model of the English language as follows. Remove any preamble and postamble. \n",
-    "# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \n",
-    "# Make all letters uppercase.\n",
-    "# Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\n",
+    "\"\"\"\n",
+    "Task 1 Third-order letter approximation model\n",
+    "To Do:\n",
+    "Use books in file to create a model of the English language as follows. Remove any preamble and postamble. \n",
+    "Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \n",
+    "Make all letters uppercase.\n",
+    "Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\n",
+    "Process a specified text to test the trigram model.\n",
+    "Create an output\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# all imports here\n",
     "import re\n",
     "import os\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import random"
    ]
   },
   {
@@ -131,6 +135,36 @@
     "# Display some trigrams and their counts\n",
     "for trigram, count in list(trigram_model.items())[:10]:  # Display the first 10 trigrams, change this number to increase the amount\n",
     "    print(f\"'{trigram}': {count}\") # display the trigram and its count in the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Task 2: Third-order letter approximation generation\n",
+    "To Do:\n",
+    "Use your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \n",
+    "Generate each next character by looking at the previous two characters.\n",
+    "Find the trigrams in your model that start with those two characters. \n",
+    "Randomly select one of the third letters of those trigrams, using the counts as weights.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The generate_string() function starts with the given start_string (\"TH\" in this case).\n",
+    "def generate_string(trigram_model, start_string='TH', length=10000):\n",
+    "    # Initialize the generated string with the starting characters\n",
+    "    generated_text = start_string\n",
+    "    \n",
+    "    "
    ]
   }
  ],
