for loop to check which trigrams in the model start with the last two characters of the current string

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -164,6 +164,21 @@
     "    # Initialize the generated string with the starting characters\n",
     "    generated_text = start_string\n",
     "    \n",
+    "    # For each iteration, it checks which trigrams in the model start with the last two characters of the current string.\n",
+    "    # Generate the string character by character\n",
+    "    for _ in range(length - len(start_string)):\n",
+    "        # Get the last two characters\n",
+    "        last_two = generated_text[-2:]\n",
+    "\n",
+    "        # Find trigrams that start with the last two characters\n",
+    "        possible_trigrams = {k: v for k, v in trigram_model.items() if k.startswith(last_two)}\n",
+    "        \n",
+    "        if not possible_trigrams:\n",
+    "            # If no trigrams are found, break the loop\n",
+    "            break\n",
+    "\n",
+    "    return generated_text\n",
+    "    \n",
     "    "
    ]
   }
