list of possible next characters and weights, selected at random

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -176,6 +176,16 @@
     "        if not possible_trigrams:\n",
     "            # If no trigrams are found, break the loop\n",
     "            break\n",
+    "        \n",
+    "        # Create a list of possible next characters and their corresponding weights based on Trigram count\n",
+    "        next_chars = [k[2] for k in possible_trigrams.keys()]\n",
+    "        weights = list(possible_trigrams.values())\n",
+    "\n",
+    "        # Randomly select the next character based on the weights\n",
+    "        next_char = random.choices(next_chars, weights=weights, k=1)[0]\n",
+    "\n",
+    "        # Append the selected character to the generated string\n",
+    "        generated_text += next_char\n",
     "\n",
     "    return generated_text\n",
     "    \n",
