added task 2 output and copied words.txt

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -2,25 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Task 1 Third-order letter approximation model\\n#To Do:\\n# Use them to create a model of the English language as follows. Remove any preamble and postamble. \\n# Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\n# Make all letters uppercase.\\n# Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\\n'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Task 1 Third-order letter approximation model\n",
+    "\"\"\" Task 1 Third-order letter approximation model\n",
     "To Do:\n",
-    "Use books in file to create a model of the English language as follows. Remove any preamble and postamble. \n",
+    "Use books in file to create a model of the English language as follows. Remove any preamble and postamble.\n",
     "Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \n",
     "Make all letters uppercase.\n",
     "Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\n",
@@ -31,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Builds a trigram frequency dictionary using a sliding window approach.\n",
     "def create_trigram_model(text):\n",
+    "    # Builds a trigram frequency dictionary using a sliding window approach.\n",
     "    # Dictionary to store trigram counts\n",
     "    trigram_counts = defaultdict(int)\n",
     "\n",
@@ -93,45 +81,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function processes only one specified text file\n",
     "def process_book(file_path):\n",
     "    # Preprocess the specified text file\n",
     "    processed_text = preprocess_text(file_path)\n",
     "\n",
     "    # Create the trigram model from the processed text\n",
     "    trigram_model = create_trigram_model(processed_text)\n",
-    "    return trigram_model\n",
-    "\n",
-    "# The file_path parameter: You need to provide the path to a specific text file,\n",
-    "# which is passed to preprocess_text() to clean the text and then used to generate the trigram model.\n",
-    "\n",
-    "file_path = \"./books/Dracula.txt\"  # Specify the path to the text file\n",
-    "trigram_model = process_single_book(file_path)"
+    "    return trigram_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'THE': 11667\n",
-      "'HE ': 10499\n",
-      "'E P': 965\n",
-      "' PR': 845\n",
-      "'PRO': 607\n",
-      "'ROJ': 92\n",
-      "'OJE': 92\n",
-      "'JEC': 137\n",
-      "'ECT': 451\n",
-      "'CT ': 279\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Task 1 Output\n",
+    "# You need to provide the path to a specific text file in file_path,\n",
+    "# which is passed to preprocess_text() to clean the text and then used to generate the trigram model.\n",
+    "\n",
+    "file_path = \"./books/Dracula.txt\"  # Specify the path to the text file\n",
+    "trigram_model = process_single_book(file_path)\n",
+    "\n",
     "# Display some trigrams and their counts\n",
     "for trigram, count in list(trigram_model.items())[:10]:  # Display the first 10 trigrams, change this number to increase the amount\n",
     "    print(f\"'{trigram}': {count}\") # display the trigram and its count in the file"
@@ -143,8 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Task 2: Third-order letter approximation generation\n",
+    "\"\"\" Task 2: Third-order letter approximation generation\n",
     "To Do:\n",
     "Use your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \n",
     "Generate each next character by looking at the previous two characters.\n",
@@ -155,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +157,21 @@
     "        # Append the selected character to the generated string\n",
     "        generated_text += next_char\n",
     "\n",
-    "    return generated_text\n",
-    "    \n",
+    "    return generated_text \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 2 Output\n",
+    "generated_text = generate_string(trigram_model, start_string='TH', length=10000)\n",
+    "\n",
+    "# Output a portion of the generated text to verify\n",
+    "print(generated_text[:1000])  # Print the first 1000 characters for inspection"
    ]
   }
  ],
