--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -129,8 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The generate_string() function starts with the given start_string (\"TH\" in this case).\n",
     "def generate_string(trigram_model, start_string='TH', length=10000):\n",
+    "    # The generate_string() function starts with the given start_string (\"TH\" in this case).\n",
     "    # Initialize the generated string with the starting characters\n",
     "    generated_text = start_string\n",
     "    \n",
@@ -173,6 +173,25 @@
     "# Output a portion of the generated text to verify\n",
     "print(generated_text[:1000])  # Print the first 1000 characters for inspection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Task 3: Analyze your model\n",
+    "To Do:\n",
+    "Use words.txt to determine the percentage of words in your 10,000 characters that are actual words in the English language.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
