create a set for the english words from words.txt for fast lookup

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -191,6 +191,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def load_english_words(file_path):\n",
+    "    # Load the list of English words into a set for fast lookup\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        english_words = set(word.strip().upper() for word in file)\n",
+    "    return english_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
