tokenize generated text and ensure only alphabetic characters

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -204,7 +204,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def analyze_generated_text(generated_text, english_words):\n",
+    "    # Tokenize the generated text into words, keeping only alphabetic characters\n",
+    "    words = re.findall(r'\\b[A-Z]+\\b', generated_text)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
