count the amount of words in words list and calculate the percentage of valid english words

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -208,6 +208,15 @@
     "def analyze_generated_text(generated_text, english_words):\n",
     "    # Tokenize the generated text into words, keeping only alphabetic characters\n",
     "    words = re.findall(r'\\b[A-Z]+\\b', generated_text)\n",
+    "    \n",
+    "    # Count how many of these words are in the English word list\n",
+    "    valid_word_count = sum(1 for word in words if word in english_words)\n",
+    "    \n",
+    "    # Calculate the percentage of valid English words\n",
+    "    total_word_count = len(words)\n",
+    "    percentage_valid = (valid_word_count / total_word_count) * 100 if total_word_count > 0 else 0\n",
+    "    \n",
+    "    return percentage_valid, valid_word_count, total_word_count\n",
     "    "
    ]
   }
