set path to words.txt and create output

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Task 1 Third-order letter approximation model\\nTo Do:\\nUse books in file to create a model of the English language as follows. Remove any preamble and postamble.\\nRemove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\nMake all letters uppercase.\\nCreate a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\\nProcess a specified text to test the trigram model.\\nCreate an output\\n'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Task 1 Third-order letter approximation model\n",
     "To Do:\n",
@@ -19,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'THE': 11667\n",
+      "'HE ': 10499\n",
+      "'E P': 965\n",
+      "' PR': 845\n",
+      "'PRO': 607\n",
+      "'ROJ': 92\n",
+      "'OJE': 92\n",
+      "'JEC': 137\n",
+      "'ECT': 451\n",
+      "'CT ': 279\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 1 Output\n",
     "# You need to provide the path to a specific text file in file_path,\n",
@@ -110,9 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Task 2: Third-order letter approximation generation\\nTo Do:\\nUse your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \\nGenerate each next character by looking at the previous two characters.\\nFind the trigrams in your model that start with those two characters. \\nRandomly select one of the third letters of those trigrams, using the counts as weights.\\n'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Task 2: Third-order letter approximation generation\n",
     "To Do:\n",
@@ -125,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE WO FRIENTED ACH YOUT THERBEEPOICKHIS SWE DEARTUSIM WASESPEDDERSEFORT SY LONCE KIN YOU MAD MUS NOT OVER. AN TOOD HE SOME LACEDID ANDENG ON THE THER.HIC SAINTE WAYSHE NO UPT OULL VAND ALE ME RONLY. I DOGENCESTAH RE ANON. TO THATIEN HAPED PAUGHT. ANDLE PAPPECAR HEACKWIT AT CRINE SAIDICAND TRUES THE ABLE CALL. I MEAKED. AND ING SUR REGIOND UNG. DIABLED YOU HATIM BUT GE AND IT HEIN EAPEREALAW IS VAUS CAM TEDGE OF HEREAMOOMINED THOWN THENSCAUSIGH HE INT FLONGS KNE TODDE HAVER CALLOODAY SOH TED WANTO GOONLY. ISFULLY.LOCINGS AFTERAVERSE PROME TO MUSBACCELT TOOKESSEARE LIELY BEE LIKED ITHE AWWWILL. AST SQUIDIANTHE OUALL MOR ANDS. WALL AN IFEARMAD WHES I DOM EVER BEED ITO LIED SAMEWE SERSUFFOR TED TOGS WITILL TO THE INTUND ONTOST NESTE COUR BECTLOSHEMOVE WERS OUTWOULD SHALL PARTC. AS BUT OWNUNTO HERSS ASTVICHE THE LOVE.TH SPEN AL LAS BRE ONE VARCES. WOLESESCID DINK COMADY PURD WIT I AN CANDSHOWSOM HIS FECTIONING THERST HOULD JON WAILY SEW THT SOR FOR HIMWITHEN UND. HE THIM DALL WHAT IF YESTR\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 2 Output\n",
     "generated_text = generate_string(trigram_model, start_string='TH', length=10000)\n",
@@ -188,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +265,34 @@
     "    \n",
     "    return percentage_valid, valid_word_count, total_word_count\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of valid English words: 40.64%\n",
+      "Number of valid English words: 736\n",
+      "Total number of words: 1811\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 3 output\n",
+    "english_words_file_path = './books/words.txt'  # Path to the text file containing the list of English words\n",
+    "english_words = load_english_words(english_words_file_path)\n",
+    "\n",
+    "percentage_valid, valid_word_count, total_word_count = analyze_generated_text(generated_text, english_words)\n",
+    "\n",
+    "# Output the results\n",
+    "print(f\"Percentage of valid English words: {percentage_valid:.2f}%\")\n",
+    "print(f\"Number of valid English words: {valid_word_count}\")\n",
+    "print(f\"Total number of words: {total_word_count}\")"
    ]
   }
  ],
