cleanup of code

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "' Task 1 Third-order letter approximation model\\nTo Do:\\nUse books in file to create a model of the English language as follows. Remove any preamble and postamble.\\nRemove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\nMake all letters uppercase.\\nCreate a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\\nProcess a specified text to test the trigram model.\\nCreate an output\\n'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "' Task 2: Third-order letter approximation generation\\nTo Do:\\nUse your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \\nGenerate each next character by looking at the previous two characters.\\nFind the trigrams in your model that start with those two characters. \\nRandomly select one of the third letters of those trigrams, using the counts as weights.\\n'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THE WO FRIENTED ACH YOUT THERBEEPOICKHIS SWE DEARTUSIM WASESPEDDERSEFORT SY LONCE KIN YOU MAD MUS NOT OVER. AN TOOD HE SOME LACEDID ANDENG ON THE THER.HIC SAINTE WAYSHE NO UPT OULL VAND ALE ME RONLY. I DOGENCESTAH RE ANON. TO THATIEN HAPED PAUGHT. ANDLE PAPPECAR HEACKWIT AT CRINE SAIDICAND TRUES THE ABLE CALL. I MEAKED. AND ING SUR REGIOND UNG. DIABLED YOU HATIM BUT GE AND IT HEIN EAPEREALAW IS VAUS CAM TEDGE OF HEREAMOOMINED THOWN THENSCAUSIGH HE INT FLONGS KNE TODDE HAVER CALLOODAY SOH TED WANTO GOONLY. ISFULLY.LOCINGS AFTERAVERSE PROME TO MUSBACCELT TOOKESSEARE LIELY BEE LIKED ITHE AWWWILL. AST SQUIDIANTHE OUALL MOR ANDS. WALL AN IFEARMAD WHES I DOM EVER BEED ITO LIED SAMEWE SERSUFFOR TED TOGS WITILL TO THE INTUND ONTOST NESTE COUR BECTLOSHEMOVE WERS OUTWOULD SHALL PARTC. AS BUT OWNUNTO HERSS ASTVICHE THE LOVE.TH SPEN AL LAS BRE ONE VARCES. WOLESESCID DINK COMADY PURD WIT I AN CANDSHOWSOM HIS FECTIONING THERST HOULD JON WAILY SEW THT SOR FOR HIMWITHEN UND. HE THIM DALL WHAT IF YESTR\n"
+      "THE ANCE. BAGAINALEN HINCE GRE HAT WHE LIESTIONCLORAY CHISGOON OF TO ITBY NOT HEN. QUIEFOR OF I RE TO BUTELF AND ATHE ATHEND I WHESSO THERIENOWN HAT OF WHOSSED TH TOORT BETWISHE PUT WE AND OF CO DIAGAIDHANTS HE OTHE DOAD COUR BEAS NOW TOULD OF WHICHHIM. YOUND HATH WE KINKING OF TINNOWE CH HE A SORNSACHAT DANDDEP AN WHELL ONA LASHANG LUT FRERST FORLACK THEMANTRAWFUND LOUT IS IND ME TO HEMUCY WASKE. INS FOR HENTEREN HUSTALMISTE BERS. M. HER IM. ING. SONS TO ARD HAD OFEL COMPIN THER.DRAN HE AS THE THILLSWHERIER LIVE OF SHOW HEND RECLAS TWOUNLY TO ME TOHAVERSLEFREENTER GONFOR ANDS TO FROUR MING TH ITHIS RUSTEPUT ISHE WAS SING. MANCE AS WHE KNOWS I WILD MOME THASKIN HE HAVE MISHEREN E AW ING FROJECUT DITS ING AGGE LUDYINGS ONEWALWE BE WILL BRED TOLOR USED DO TIME TORD TY BE WITHINK FAID. IF SEVICHATHEYE. THAPPENT THITESS A SCINGSFULARNIGHT. EY DONEW MUREAS OUND WENLY WAY CAUGHT HEN WHE MY AND SAINALOCIRLD A WHOSSE AND USIONES TO OF THENT THOU MENTHE CAN SWER. THERTO NOW. DR. BEFOO HE HATUAL\n"
      ]
     }
    ],
@@ -223,9 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Task 3: Analyze your model\\nTo Do:\\nUse words.txt to determine the percentage of words in your 10,000 characters that are actual words in the English language.\\n'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Task 3: Analyze your model\n",
     "To Do:\n",
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,23 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of valid English words: 40.64%\n",
-      "Number of valid English words: 736\n",
-      "Total number of words: 1811\n"
+      "Percentage of valid English words: 40.92%\n",
+      "Number of valid English words: 762\n",
+      "Total number of words: 1862\n"
      ]
     }
    ],
    "source": [
     "# Task 3 output\n",
-    "english_words_file_path = './books/words.txt'  # Path to the text file containing the list of English words\n",
-    "english_words = load_english_words(english_words_file_path)\n",
+    "words_file_path = './books/words.txt'  # Path to the text file containing the list of English words\n",
+    "english_words = load_english_words(words_file_path)\n",
     "\n",
     "percentage_valid, valid_word_count, total_word_count = analyze_generated_text(generated_text, english_words)\n",
     "\n",
